// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range Default renders correctly 1`] = `
<jest>
  <input
    aria-label="Value: "
    class="ecl-range ecl-range--m"
    data-ecl-range-input=""
    id="example-range-id"
    max="30"
    type="range"
    value="15"
  />
  <div
    class="ecl-range__value"
  >
    Value: 
    <span
      class="ecl-range__value-current"
      data-ecl-range-value-current=""
    />
  </div>
</jest>
`;

exports[`Range Default renders correctly with extra attributes 1`] = `
<jest>
  <input
    aria-label="Value: "
    class="ecl-range ecl-range--m"
    data-ecl-range-input=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-range-id"
    max="30"
    type="range"
    value="15"
  />
  <div
    class="ecl-range__value"
  >
    Value: 
    <span
      class="ecl-range__value-current"
      data-ecl-range-value-current=""
    />
  </div>
</jest>
`;

exports[`Range Default renders correctly with extra class names 1`] = `
<jest>
  <input
    aria-label="Value: "
    class="ecl-range ecl-range--m custom-class custom-class--test"
    data-ecl-range-input=""
    id="example-range-id"
    max="30"
    type="range"
    value="15"
  />
  <div
    class="ecl-range__value"
  >
    Value: 
    <span
      class="ecl-range__value-current"
      data-ecl-range-value-current=""
    />
  </div>
</jest>
`;

exports[`Range Invalid renders correctly 1`] = `
<jest>
  <input
    aria-label="Value: "
    class="ecl-range ecl-range--invalid ecl-range--m"
    data-ecl-range-input=""
    id="example-range-id"
    max="30"
    type="range"
    value="15"
  />
  <div
    class="ecl-range__value"
  >
    Value: 
    <span
      class="ecl-range__value-current"
      data-ecl-range-value-current=""
    />
  </div>
</jest>
`;

exports[`Range Optional renders correctly 1`] = `
<jest>
  <input
    aria-label="Value: "
    class="ecl-range ecl-range--m"
    data-ecl-range-input=""
    id="example-range-id"
    max="30"
    type="range"
    value="15"
  />
  <div
    class="ecl-range__value"
  >
    Value: 
    <span
      class="ecl-range__value-current"
      data-ecl-range-value-current=""
    />
  </div>
</jest>
`;
